--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
                 contemporary cuisine. The restaurants <br>have become the
                 ultimate dinning destinations in <br> Lahore. From family
                 occasions to business dinner <br>and moments of the heart, this
-                place is where <br>unforgettable memories are made.
+                place is where <br>unforgettable memories are made. <br><br>Terms % Condition Privacy Policy
+
+
 
               </p>
             </div>
@@ -434,21 +436,27 @@
 
               <a href>+92 03 111 444 610 </a>
               <a href>snpfood@brain.net.pk </a>
-              <a href>23-Usman Block, New GardenTown, Lahore, Pakistan
+              <a href>23-Usman Block, New GardenTown, <br> Lahore, Pakistan
               </a>
 
             </div>
             <div class="lastfile3">
-              <h5>Follow Uks</h5>
-              <a href>Home</a>
-              <a href>Home</a>
-              <a href>Home</a>
-
-              <a href>Home</a>
+              <h5>Follow Us</h5>
+              <div class="logo">
+                <a href="https://www.facebook.com/TheSaltnPepperRestaurants/" target="_blank"><img src="images/facebook.png" alt="" width="40px" height="40px"></a>
+                <a href="https://www.instagram.com/saltnpepper_official/" target="_blank"><img src="images/insta.png" alt="" width="40px" height="40px"></a>
+                <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fsnprestaurant" target="_blank"><img src="images/twitter.png" alt="" width="40px" height="40px"></a>
+              </div> <br>
+               <a href="https://apps.apple.com/tr/app/saltn-pepper/id1631088988" target="_blank"><img src="images/app.svg" alt=""></a>
+               <a href="https://play.google.com/store/apps/details?id=com.hifood.saltnpepperpk&hl=en_US&gl=US&pli=1" target="_blank"><img src="images/playstore.png" alt="" width="120px" height="45px"></a>
             </div>
 
-          </div>
-
+          </div> <hr>
+       <div class="power">
+        <p><span>© 2023 Salt'n Pepper </span>Restaurant.Powered Bytossdown.com</p>
+        
+       
+       </div>
           <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
