--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           </div> <hr>
        <div class="power">
         <p>© 2023 Salt'n Pepper Restaurant.</p>
-        <span>Powered Bytossdown.comh </span>
+        <span>Powered Bytossdown.com</span>
         
        
        </div>
